<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/menu_stats"
            android:title="@string/menu_stats" />
        <item
            android:id="@+id/menu_weight"
            android:title="@string/menu_weight" />
        <item
            android:id="@+id/menu_products"
            android:title="@string/menu_products" />
        <item
            android:id="@+id/menu_templates"
            android:title="@string/menu_templates" />
        <item
            android:id="@+id/menu_reminder"
            android:title="@string/menu_reminder" />
        <item
            android:id="@+id/menu_export"
            android:title="@string/menu_export" />
        <item
            android:id="@+id/menu_import"
            android:title="@string/menu_import" />
        <item
            android:id="@+id/menu_updates"
            android:title="@string/menu_updates" />
    </group>
</menu>
